feat: 발급 성공 시 배열로 Redis 삭제하도록 변경